# streamify-rs

./: Cargo.toml  README.md
src/: any.rs  future.rs  lib.rs
tests/: streamify.rs
